# RockPaperScissors-Bot

./: README.md  main.py  pyproject.toml  setup.cfg
config_data/: config.py
keyboards/: keyboards.py
lexicon/: lexicon_ru.py
services/: services.py
